Fixed: jw-community - Fixed source code can't build with JDK21 @8.2-SNAPSHOT